# serializer version: 1
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1zoe40vin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1zoe40vin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_access_denied[zoe_40][button.reg_zoe_40_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1zoe40vin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1zoe40vin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_empty[zoe_40][button.reg_zoe_40_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1zoe40vin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1zoe40vin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_errors[zoe_40][button.reg_zoe_40_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1zoe40vin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1zoe40vin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_button_not_supported[zoe_40][button.reg_zoe_40_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_fuel][button.reg_captur_fuel_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_fuel_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1capturfuelvin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_fuel][button.reg_captur_fuel_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR-FUEL Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_fuel_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_fuel][button.reg_captur_fuel_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_fuel_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1capturfuelvin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_fuel][button.reg_captur_fuel_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR-FUEL Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_fuel_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_fuel][button.reg_captur_fuel_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_fuel_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1capturfuelvin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_fuel][button.reg_captur_fuel_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR-FUEL Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_fuel_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_phev_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1capturphevvin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_phev_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_phev_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1capturphevvin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_phev_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_phev_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1capturphevvin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_phev_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_phev_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1capturphevvin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_phev_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_captur_phev_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1capturphevvin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[captur_phev][button.reg_captur_phev_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_captur_phev_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_twingo_iii_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1twingoiiivin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_twingo_iii_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_twingo_iii_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1twingoiiivin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_twingo_iii_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_twingo_iii_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1twingoiiivin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_twingo_iii_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_twingo_iii_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1twingoiiivin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_twingo_iii_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_twingo_iii_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1twingoiiivin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[twingo_3_electric][button.reg_twingo_iii_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_twingo_iii_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1zoe40vin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1zoe40vin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe40vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe40vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe40vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_40][button.reg_zoe_40_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_40_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_50_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flash lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flash lights',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'vf1zoe50vin_flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 Flash lights',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_50_flash_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_sound_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_50_sound_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound horn',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound horn',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_horn',
    'unique_id': 'vf1zoe50vin_sound_horn',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_sound_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 Sound horn',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_50_sound_horn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_start_air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_50_start_air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start air conditioner',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start air conditioner',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_air_conditioner',
    'unique_id': 'vf1zoe50vin_start_air_conditioner',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_start_air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 Start air conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_50_start_air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_start_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_50_start_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start_charge',
    'unique_id': 'vf1zoe50vin_start_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_start_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 Start charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_50_start_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_stop_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.reg_zoe_50_stop_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stop charge',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop_charge',
    'unique_id': 'vf1zoe50vin_stop_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[zoe_50][button.reg_zoe_50_stop_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 Stop charge',
    }),
    'context': <ANY>,
    'entity_id': 'button.reg_zoe_50_stop_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
